--- a/website/index.html
+++ b/website/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
+    <meta property="og:image" content="https://github.com/fejes713/accessibility-guide/raw/master/preview.png">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Accessibility Guide</title>
     <meta name="description"
