added animated logo to presskit / added favicon

--- a/website/index.html
+++ b/website/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Accessibility Guide</title>
     <meta name="description"
-        content="A curated collection of web accessibility tips, tricks, and best practices">
+		content="A curated collection of web accessibility tips, tricks, and best practices">
+	<link rel="icon" href="favicon.png">
     <meta name="keywords" content="accessibility, a11y, WCAG, ARIA, guide, list">
     <meta name="author" content="Stefan Fejes (ns.fejes.stefan@gmail.com)">
     <script src="index.js" defer></script>
